Stopped the jump on the line height for the language selector

--- a/css/global-style.css
+++ b/css/global-style.css
@@ -436,7 +436,7 @@ blockquote{
 }
 
 .lang-switch .chosen-container-single .chosen-single div b{
-	background: url(/sites/all/themes/aesbs337/css/chosen-sprite-white.png) no-repeat 0px 9px;
+	background: url(/sites/all/themes/aesbs337/css/chosen-sprite-white.png) no-repeat 0px 8px;
 }
 
 .container-inline .btn{
